<resources>

    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>



    <string name="app_name">HaniHani</string>
    <string name="app_title">한의원 경영앱</string>
    <string name="app_desc">한의원 진료/운영 안드로이드 앱</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="app_clinic_name">clinic</string>
    <string name="app_clinic_title">한의원 진료앱</string>
    <string name="app_clinic_desc">접수-진단-처방-티칭을 일괄적으로 관리</string>
    <string name="app_clinic_pt_name">clinicPt</string>
    <string name="app_clinic_pt_title">환자 목록</string>
    <string name="app_clinic_pt_desc">ClinicPt_desc</string>
    <string name="app_clinic_dx_name">ClinicDx_name</string>
    <string name="app_clinic_dx_title">진단 관리</string>
    <string name="app_clinic_dx_desc">ClinicDx_desc</string>
    <string name="app_clinic_tx_name">ClinicTx_name</string>
    <string name="app_clinic_tx_title">치료 관리</string>
    <string name="app_clinic_tx_desc">ClinicTx_desc</string>
    <string name="app_clinic_gd_name">ClinicGd_name</string>
    <string name="app_clinic_gd_title">생활 지도</string>
    <string name="app_clinic_gd_desc">ClinicGd_desc</string>
    <string name="app_mn_name">mn</string>
    <string name="app_mn_title">한의원 운영앱</string>
    <string name="app_mn_desc">회계-재고-교육</string>
    <string name="app_settings_title">Settings</string>
    <string name="app_help_title">Help</string>
</resources>
