<?xml version="1.0" encoding="utf-8"?>
<!--

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgContent"
    android:baselineAligned="false"
    android:orientation="horizontal">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="3"
        android:background="@color/bgTitleLeft"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/pt_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/pt1" />

        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20dp"
            android:text="Name"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/pt_photo"
            android:layout_toEndOf="@id/pt_photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="firstDate"
            android:id="@+id/title_firstDate"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="lastDate"
            android:id="@+id/title_lastDate"
            android:layout_below="@+id/title_name"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/title_visitCount"
            android:text="10"
            android:layout_alignBottom="@id/pt_photo"
            android:layout_alignRight="@id/title_name"
            android:layout_alignEnd="@id/title_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="birth"
            android:id="@+id/title_birth"
            android:layout_alignBottom="@id/pt_photo"
            android:layout_alignRight="@id/title_lastDate"
            android:layout_alignEnd="@id/title_lastDate" />
    </RelativeLayout>
</LinearLayout>
    -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgContent"
    android:baselineAligned="false"
    android:orientation="horizontal">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_weight="3"
        android:background="@color/bgTitleLeft"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/pt_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/white"
            android:textSize="26sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/bgTitleRight"
        android:paddingBottom="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="15dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/title_from_to_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/from_to_purple" />

        <TextView
            android:id="@+id/title_firstDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/title_from_to_dots"
            android:layout_marginTop="-5dp"
            android:layout_toEndOf="@+id/title_from_to_dots"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/title_from_to_dots_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/title_firstDate"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/title_from_to_dots"
            android:src="@color/contentDividerLine" />

        <TextView
            android:id="@+id/title_lastDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_from_to_dots_divider"
            android:layout_toEndOf="@id/title_from_to_dots"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/title_visitCount"
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <TextView
            style="@style/TitleBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/title_visitCount"
            android:layout_alignStart="@id/title_visitCount"
            android:text="@string/requests_count_badge" />

        <TextView
            android:id="@+id/title_weight"
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/weight_mock" />

        <TextView
            style="@style/TitleBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/title_weight"
            android:layout_alignStart="@id/title_weight"
            android:text="@string/weight_badge" />

        <TextView
            android:id="@+id/title_birth"
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            style="@style/TitleBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/title_birth"
            android:layout_alignStart="@id/title_birth"
            android:text="@string/pledge_badge" />

    </RelativeLayout>
</LinearLayout>
